--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 </ul>
             </div>
             <div class="copyright">
-                <p3>Copyright &copy;2020 All Rights Reserved . This Website is made with  <p4><i class="fas fa-heart "></i> by </p4></p3>
+                <p3>Copyright &copy;2020 All Rights Reserved. This Website is made with  <p4><i class="fas fa-heart "></i> by Raja's </p4></p3>
             </div>
         </div>
     </div>
